[package]
name = "image-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.0"
colored = "2.0.0"
flexi_logger = "0.25"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
